--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,8 @@ galaxy_info:
     - name: Fedora
       versions:
         - 21
+        - 22
+        - 23
     - name: Ubuntu
       versions:
         - trusty
@@ -20,5 +22,6 @@ galaxy_info:
   categories:
     - development
 
-dependencies: []
+dependencies:
+  - andrewrothstein.unarchive-deps
   
