--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,32 +1,34 @@
 ---
 - name: download flannel
-  environment: proxy_env
+  become: yes
+  become_user: root
   get_url: >
     url={{flannel_pkg_url}}
     dest=/tmp/{{flannel_pkg}}
-    owner=root
-    group=root
-    mode=644
-  
+    mode=0644
+    timeout={{flannel_download_timeout_seconds}}
+
+- name: make install directory
+  become: yes
+  become_user: root
+  file: >-
+    path={{flannel_install_dir}}/{{flannel_name}}
+    state=directory
+    mode=0755
+    
 - name: unachive flannel
+  become: yes
+  become_user: root
   unarchive: >
     copy=no
     src=/tmp/{{flannel_pkg}}
-    dest=/opt
-    creates=/opt/{{flannel_name}}
+    dest={{flannel_install_dir}}/{{flannel_name}}
+    creates={{flannel_install_dir}}/{{flannel_name}}/flanneld
 
-- name: link flannel
+- name: link flanneld
+  become: yes
+  become_user: root
   file: >
-    src=/opt/{{flannel_name}}
-    dest=/opt/flannel
+    src={{flannel_install_dir}}/{{flannel_name}}/flanneld
+    dest={{flannel_install_dir}}/flanneld
     state=link
-    owner=root
-    group=root
-
-- name: include flannel in the default path...
-  copy: >
-    src=etc/profile.d/flannel.sh
-    dest=/etc/profile.d/flannel.sh
-    owner=root
-    group=root
-    mode=644
