--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,13 +15,16 @@ galaxy_info:
         - 21
         - 22
         - 23
+        - 24
     - name: Ubuntu
       versions:
         - trusty
+        - xenial
 
   galaxy_tags:
     - development
 
 dependencies:
-  - andrewrothstein.unarchive-deps
+  - role: andrewrothstein.unarchive-deps
+    version: v1.0.3
   
