--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-flannel_version: v0.6.1
-flannel_platform : 'linux-amd64'
-flannel_mirror: 'https://github.com/coreos/flannel/releases/download'
+flannel_version: v0.6.2
+flannel_platform : linux-amd64
+flannel_mirror: https://github.com/coreos/flannel/releases/download
 flannel_install_dir: /usr/local/bin
 flannel_download_timeout_seconds: 600
