--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,19 +12,19 @@ galaxy_info:
         - 7
     - name: Fedora
       versions:
-        - 21
-        - 22
         - 23
         - 24
+        - 25
     - name: Ubuntu
       versions:
         - trusty
         - xenial
+    - name: Alpine
+      versions:
+        - all
 
   galaxy_tags:
     - development
 
-dependencies:
-  - role: andrewrothstein.unarchive-deps
-    version: v1.0.3
+dependencies: []
   
