--- a/meta/main.yml
+++ b/meta/main.yml
@@ -22,6 +22,9 @@ galaxy_info:
     - name: Alpine
       versions:
         - all
+    - name: Debian
+      versions:
+        - jessie
   galaxy_tags:
     - development
 
