switch to the tgz install. up to v0.8.0

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -28,5 +28,7 @@ galaxy_info:
   galaxy_tags:
     - development
 
-dependencies: []
+dependencies:
+  - src: andrewrothstein.unarchive-deps
+    version: v1.0.9
   
