--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,46 @@
 ---
-- name: download flannel
-  become: yes
-  become_user: root
-  get_url:
-    url: '{{flannel_url}}'
-    dest: '{{flannel_install_dir}}/{{flannel_target}}'
-    mode: 0755
-    timeout: '{{flannel_download_timeout_seconds}}'
-    checksum: '{{flannel_checksum}}'
-
-- name: link flanneld
+- name: make install dir...
   become: yes
   become_user: root
   file:
-    src: '{{flannel_install_dir}}/{{flannel_target}}'
-    dest: '{{flannel_install_dir}}/flanneld'
+    path: '{{flannel_install_dir}}'
+    state: directory
+    mode: 0755
+
+- name: download flannel archive...
+  become: yes
+  become_user: root
+  get_url:
+    url: '{{flannel_tgz_url}}'
+    dest: /tmp/{{flannel_tgz}}
+    mode: 0644
+    timeout: '{{flannel_download_timeout_seconds}}'
+    checksum: '{{flannel_checksum}}'
+
+- name: unarchive...
+  become: yes
+  become_user: root
+  unarchive:
+    remote_src: yes
+    src: /tmp/{{flannel_tgz}}
+    dest: '{{flannel_install_dir}}'
+    creates: '{{flannel_install_dir}}/flanneld'
+
+- name: link binaries...
+  become: yes
+  become_user: root
+  with_items:
+    - flanneld
+    - mk-docker-opts.sh
+  file:
+    src: '{{flannel_install_dir}}/{{item}}'
+    dest: '{{flannel_parent_install_dir}}/bin/{{item}}'
     state: link
+
+- name: cleanup...
+  become: yes
+  become_user: root
+  when: flannel_cleanup
+  file:
+    path: /tmp/{{flannel_tgz}}
+    state: absent
