--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,7 @@ galaxy_info:
         - 23
         - 24
         - 25
+        - 26
     - name: Ubuntu
       versions:
         - trusty
@@ -25,6 +26,7 @@ galaxy_info:
     - name: Debian
       versions:
         - jessie
+        - stretch
   galaxy_tags:
     - development
 
