--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,23 +9,22 @@ galaxy_info:
   - MIT
   min_ansible_version: 1.2
   platforms:
-  - name: EL
-    versions:
-    - 7
-  - name: Fedora
-    versions:
-    - 23
-    - 24
-    - 25
-    - 26
-  - name: Ubuntu
-    versions:
-    - trusty
-    - xenial
   - name: Alpine
     versions:
     - all
   - name: Debian
     versions:
-    - jessie
-    - stretch
+    - bullseye
+    - buster
+  - name: EL
+    versions:
+    - 8
+    - 9
+  - name: Fedora
+    versions:
+    - 36
+    - 37
+  - name: Ubuntu
+    versions:
+    - focal
+    - jammy
