--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,27 +4,27 @@ galaxy_info:
   company: BlackRock
   description: flannel role
   galaxy_tags:
-  - development
-  license:
-  - MIT
-  min_ansible_version: 1.2
+    - development
+  license: MIT
+  min_ansible_version: '1.2'
   platforms:
-  - name: Alpine
-    versions:
-    - all
-  - name: Debian
-    versions:
-    - bookworm
-    - bullseye
-  - name: EL
-    versions:
-    - 8
-    - 9
-  - name: Fedora
-    versions:
-    - 37
-    - 38
-  - name: Ubuntu
-    versions:
-    - focal
-    - jammy
+    - name: Alpine
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - bookworm
+        - bullseye
+    - name: EL
+      versions:
+        - 8
+        - 9
+    - name: Fedora
+      versions:
+        - 38
+        - 39
+    - name: Ubuntu
+      versions:
+        - focal
+        - jammy
+  role_name: flannel
