--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,15 @@
 ---
-- ansible.builtin.include_role:
+- name: Installing andrewrothstein.unarchivedeps
+  ansible.builtin.include_role:
     name: andrewrothstein.unarchivedeps
 - name: Check for flannel installation at {{ flannel_exe }}
   become: true
-  stat:
+  ansible.builtin.stat:
     path: '{{ flannel_exe }}'
   changed_when: false
   register: flannel_binary
-- when: not flannel_binary.stat.exists
+- name: Downloading and installing flannel
+  when: not flannel_binary.stat.exists
   block:
     - name: Download {{ flannel_tgz_url }} to {{ flannel_tmp_tgz }}
       become: true
@@ -15,7 +17,7 @@
       ansible.builtin.get_url:
         url: '{{ flannel_tgz_url }}'
         dest: '{{ flannel_tmp_tgz }}'
-        mode: 0644
+        mode: '644'
         timeout: '{{ flannel_download_timeout_seconds }}'
         checksum: '{{ flannel_checksum }}'
     - name: Mkdir {{ flannel_install_dir }}
@@ -24,7 +26,7 @@
       ansible.builtin.file:
         path: '{{ flannel_install_dir }}'
         state: directory
-        mode: 0755
+        mode: '755'
     - name: Unarchive...
       become: true
       become_user: root
@@ -41,7 +43,7 @@
         path: '{{ flannel_tmp_tgz }}'
         state: absent
 
-- name: linking {{ flannel_link }} to {{ flannel_exe }}
+- name: Linking {{ flannel_link }} to {{ flannel_exe }}
   become: true
   become_user: root
   ansible.builtin.file:
