--- a/test.yml
+++ b/test.yml
@@ -1,11 +1,13 @@
 ---
-- hosts: all
+- name: Testing andrewrothstein.flannel
+  hosts: all
   roles:
     - role: '{{ playbook_dir }}'
   tasks:
-    - command: /usr/local/bin/flanneld --version
+    - name: Executing 'flanneld --version'
+      ansible.builtin.command: /usr/local/bin/flanneld --version
+      changed_when: false
       register: flanneld_test_output
-    - name: /usr/local/bin/flanneld --version
-      debug:
+    - name: Output of 'flanneld --version'
+      ansible.builtin.debug:
         msg: '{{ flanneld_test_output.stderr }}'
-
